<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dce4e4"
    tools:context=".ui.neighbour_list.ProfileNeighbourActivity">


  <ImageView
      android:id="@+id/profile_avatar"
      android:layout_width="match_parent"
      android:layout_height="300dp"
      android:scaleType="centerCrop"
      android:contentDescription="@string/profileimage"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:srcCompat="@drawable/ic_account" />

  <TextView
      android:id="@+id/profile_name"
      android:layout_width="wrap_content"
      android:layout_height="48dp"
      android:layout_marginStart="16dp"
      android:layout_marginBottom="32dp"
      android:background="@android:color/transparent"
      android:ems="10"
      android:focusable="false"
      android:focusableInTouchMode="false"
      android:importantForAutofill="no"
      android:textColor="#FFFFFF"
      android:textSize="28sp"
      app:layout_constraintBottom_toBottomOf="@+id/profile_avatar"
      app:layout_constraintStart_toStartOf="@+id/profile_avatar"
      tools:text="Name" />


  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/AddFavoriteButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:clickable="true"
      android:contentDescription="@string/put_in_fav"
      android:focusable="true"
      app:backgroundTint="#FFFFFF"
      app:layout_constraintBottom_toTopOf="@+id/cardView2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/profile_avatar"
      app:srcCompat="@drawable/ic_star_white_24dp" />


  <androidx.cardview.widget.CardView
      android:id="@+id/cardView2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/profile_avatar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

      <TextView
          android:id="@+id/profile_name2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@android:color/transparent"
          android:ems="10"
          android:importantForAutofill="no"
          android:focusable="false"
          android:focusableInTouchMode="false"
          android:padding="12dp"
          tools:text="Name"
          android:textSize="24sp" />

      <View
          android:id="@+id/divider"
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="?android:attr/listDivider" />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="AddressIcon"
            app:srcCompat="@drawable/ic_baseline_location_on_24" />

        <TextView
            android:id="@+id/profile_address"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:importantForAutofill="no"
            android:textSize="14sp"
            tools:text="Address" />

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:contentDescription="PhoneIcon"
            app:srcCompat="@drawable/ic_baseline_local_phone_24" />

        <TextView
            android:id="@+id/profile_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:importantForAutofill="no"
            android:focusable="false"
            android:focusableInTouchMode="false"
            tools:text="Phone"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
             />


      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:srcCompat="@drawable/ic_baseline_rss_feed_24" />

        <TextView
            android:id="@+id/profile_socialmedia"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:importantForAutofill="no"
            android:focusable="false"
            android:focusableInTouchMode="false"
            tools:text="Facebook"
            android:textSize="14sp" />

      </LinearLayout>

    </LinearLayout>

  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="150dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="20dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cardView2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical">

      <TextView
          android:id="@+id/textView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="16dp"
          android:background="@android:color/transparent"
          android:contentDescription="@string/a_propos_de_moi"
          android:text="@string/a_propos_de_moi"
          android:textSize="24sp" />

      <View
          android:id="@+id/divider2"
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:layout_marginTop="4dp"
          android:background="?android:attr/listDivider" />

      <TextView
          android:id="@+id/profile_description"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="start"
          android:layout_marginStart="8dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="8dp"
          android:layout_marginBottom="8dp"
          android:background="@android:color/transparent"
          android:importantForAutofill="no"
          android:focusable="false"
          android:focusableInTouchMode="false"
          android:minHeight="48dp"
          tools:text="Description"
          android:textSize="14sp" />

    </LinearLayout>
  </androidx.cardview.widget.CardView>



  <ImageButton
      android:id="@+id/back_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:background="@color/transparent"
      android:backgroundTint="@color/transparent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_baseline_arrow_back_24" />


</androidx.constraintlayout.widget.ConstraintLayout>